Fixed @PostConstruct issue